fix: refactor tests to use the Nomenclature class